# target-dynamics-bc

./: .gitignore  README.md  meltano.yml  pyproject.toml  vinni-tenant-config.json
.github/workflows/: smoke-test.yml
target_dynamics_bc/: auth.py  client.py  lambda.py  target.py  utils.py
target_dynamics_bc/mappers/: base_mappers.py  bill_expense_item_schema_mapper.py  bill_line_item_schema_mapper.py  bill_payment_schema_mapper.py  bill_schema_mapper.py  customer_schema_mapper.py  journal_entry_line_schema_mapper.py  journal_entry_schema_mapper.py  vendor_schema_mapper.py
target_dynamics_bc/sinks/: base_sinks.py  bill_payment_sink.py  bill_sink.py  customer_sink.py  journal_entry_sink.py  vendor_sink.py
target_dynamics_bc/tests/: __init__.py  test_core.py
target_dynamics_v2/: auth.py  client.py  constants.py  mapping.py  mapping_dynamics.json  sinks.py  target.py  utils.py
target_dynamics_v2/mappers/: attachment_schema_mapper.py  base_mappers.py  bill_comment_schema_mapper.py  bill_expense_item_schema_mapper.py  bill_line_item_schema_mapper.py  bill_payment_schema_mapper.py  bill_schema_mapper.py  credit_memo_expense_item_schema_mapper.py  credit_memo_line_item_schema_mapper.py  credit_memo_schema_mapper.py  customer_schema_mapper.py  item_schema_mapper.py  journal_entry_line_schema_mapper.py  journal_entry_schema_mapper.py  vendor_schema_mapper.py
target_dynamics_v2/sinks/: base_sinks.py  bill_payment_sink.py  bill_sink.py  credit_memo_sink.py  customer_sink.py  item_sink.py  journal_entry_sink.py  vendor_sink.py
target_dynamics_v2/tests/: __init__.py  (+1 more)
